{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "701b9067-2c15-4db2-a33b-4d8b2b6ff8fd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "34f552fd-c69e-437f-9020-94d41efd4bb3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "c30a9585-686a-4971-977b-df263f624e4c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Lock On Target Left",
                    "type": "Button",
                    "id": "5ec0415f-bc26-4376-80d5-51fe2a5ee47e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Lock On Target Right",
                    "type": "Button",
                    "id": "7abd1bee-ab52-49ec-b751-3f3c5609654d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "AWSD",
                    "id": "71486297-5e63-4a62-9d27-27b7b2f4ec94",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5671c2d9-a5ee-48d5-871f-87124ca2ec38",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b85d9f6e-fc46-40b0-bdce-864cba1d722c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c2645190-1342-4f1f-86b4-028dad7f0235",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8c2da5ee-de63-4ad8-9348-b40bba1dac61",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c0dd8cb9-01e6-4a34-a828-3733858d1b21",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "PC",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c49553b5-c2b9-4181-a5f4-83983fe9e6a5",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Lock On Target Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67a37a0c-8b85-439d-83da-56c64539b6db",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Lock On Target Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "f5fb6abb-a338-4efe-9dbc-d80da8d173ff",
            "actions": [
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "dbf8a213-490b-47ad-b115-f60cc88918b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RB",
                    "type": "Button",
                    "id": "88efbfea-5854-4992-8c0b-6e33ac4a7db5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Critical Attack",
                    "type": "Button",
                    "id": "6170f936-0772-4a96-872e-e920b3e73d3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RT",
                    "type": "Button",
                    "id": "b38e3579-d2bd-4375-8426-187fe459aeb1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "E",
                    "type": "Button",
                    "id": "1c8ff5db-7180-4eb3-a176-3a02cf47d057",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "73f5c546-d9aa-4d60-806b-517ae92ce78d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "08fd489c-a16d-4d69-a2f5-4f3660c03038",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "5d736ebd-d0da-4582-8d0e-1435c3c70559",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Y",
                    "type": "Button",
                    "id": "69cc1147-eeb2-4784-af18-f3612d98eeec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Walk",
                    "type": "Button",
                    "id": "9cffe6e3-f7ce-4727-8c1e-3d9fe7276a19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EstusQuickSlotUse",
                    "type": "Button",
                    "id": "a5864797-70ef-44bd-8335-5b6f3aa2d81f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LT",
                    "type": "Button",
                    "id": "b4b6c1ae-61ec-4836-bc0e-9d93a09999ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "3fc48cb1-f1ee-471a-8b0b-b57201c231f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BowAction",
                    "type": "Button",
                    "id": "42dc7aaa-1cb4-4d54-8b62-218264f3a0f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a8263a2-742d-41b8-b387-fedae881987c",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bd35847-772e-49c0-8765-645a645da6b0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "PC",
                    "action": "RB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65e157d2-bf0a-4015-8766-7da9f8a11d49",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "PC",
                    "action": "RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cc1f691-741d-4ffc-97c2-ee0b39d6ab9c",
                    "path": "<Keyboard>/e",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "PC",
                    "action": "E",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa4f3c47-61ab-4432-a827-7de8e9605a34",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a7eb515-8d87-4dbf-9828-7bda929b1a55",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d906150a-ad56-4472-84eb-667ef7ffad4a",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5e6c923-dc29-4f6c-8c6c-070d5e89cf84",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce9cbf30-fb2b-4afa-aa00-97890bc1b90d",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfdcad84-74ba-4536-9b30-4aee3713a1de",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "EstusQuickSlotUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7855eb6-940a-478e-8f40-73cf9551abd5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "PC",
                    "action": "Critical Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4ba156b-0988-4e65-ba08-d63f499aa0c4",
                    "path": "<Keyboard>/z",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "PC",
                    "action": "LT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3eab68fd-6053-4b14-b302-807ebef30d02",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "PC",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1e23566-5d47-4e43-b5ac-f45df975964b",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "PC",
                    "action": "BowAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Quick Slots",
            "id": "bb9d6531-8e6c-4bd8-a0f6-4e4bc64441bf",
            "actions": [
                {
                    "name": "D Pad Up",
                    "type": "Button",
                    "id": "3a4f857c-7adc-4e44-a14f-548f9cc72c44",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "D Pad Down",
                    "type": "Button",
                    "id": "8a227ded-3fbd-442d-90a2-587a08b5f7bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "D Pad Left",
                    "type": "Button",
                    "id": "e2f2a4fc-fedf-4e10-83b9-c6a6a2a19c75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "D Pad Right",
                    "type": "Button",
                    "id": "1c2d3022-d13b-47cc-bc06-9f60aeb6f362",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "12846deb-f584-411f-b068-3a97d837b0d9",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "D Pad Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffb73273-cb9f-4557-afd8-b5c99de6c879",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "D Pad Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2611844c-7dfa-42f2-aa05-57ad3e04648d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "D Pad Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3cbe214-1b47-4571-a7db-ee3b3c83c833",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "D Pad Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}